# freightlink-rop

./: .gitignore  README.md  main.py  pyproject.toml
dbt/: dbt_project.yml
dbt/models/: gold_reorder_status.sql  schema.yml
orchestration/: start.sh
orchestration/dags/: sap_to_bronze_dag.py
scripts/: bronze_to_silver.py  clean_s3_instacart.py  extract_sap_to_bronze.py  seed_instacart_direct.py  test_freight_connection.py  test_sap_connection.py
terraform/: compute.tf  main.tf  redshift.tf  variables.tf
